# athas

./: .depcheckrc  .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .rules  .tool-versions  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPANY_ROSTER.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AND_FEEDBACK_AGREEMENT.md  Cargo.toml  FACTORY_AI.md  LICENSE  README.md  ROADMAP.md  SECURITY-REVIEW.md  SECURITY.md  TEMP_AGENT_HANDOFF_2026-03-26.md  THIRD_PARTY_LICENSES.md  VIBE_CODING.md  VISION.md  commitlint.config.cjs  components.json  flake.nix  index.html  package.json  test.sqlite  vite.config.ts
.claude/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.storybook/: main.ts
brand/: foundations.json
crates/ai/: Cargo.toml
crates/ai/src/: chat_history.rs  lib.rs  runtime.rs
crates/ai/src/acp/: bridge.rs  bridge_commands.rs  bridge_init.rs  bridge_prompt.rs  client.rs  config.rs  mod.rs  process.rs  terminal_state.rs  types.rs  workspace_path.rs
crates/database/: Cargo.toml
crates/database/src/: connection_manager.rs  lib.rs  sidecar.rs  sql_common.rs
crates/database/src/fixtures/: sidecar_panic_request_v1.json  sidecar_provider_mismatch_v1.json  sidecar_request_v1.json  sidecar_unsupported_protocol_request_v2.json
crates/database/src/providers/: duckdb.rs  mod.rs  mysql.rs  postgres.rs  redis_db.rs  sqlite.rs
crates/debugger/: Cargo.toml
crates/debugger/src/: lib.rs
crates/github/: Cargo.toml
crates/github/src/: api.rs  cli.rs  lib.rs  models.rs  serde_helpers.rs  tests.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  config.rs  lib.rs  manager.rs  manager_state.rs  utils.rs
crates/remote/: Cargo.toml
crates/remote/src/: lib.rs  state.rs  terminal.rs
crates/terminal/: Cargo.toml
crates/terminal/examples/: tui_probe.rs
crates/terminal/src/: config.rs  connection.rs  lib.rs  manager.rs  protocol.rs  shell.rs
crates/tooling/: Cargo.toml
crates/tooling/src/: installer.rs  lib.rs  platform.rs  registry.rs  types.rs
docs/: EXTENSION_SETUP.md  README.md  RELEASING.md  ai-agents.mdx  ai-assistant.mdx  ai-chat-ui-revamp-prompts.md  ai-providers.mdx  command-palette.mdx  contributing.mdx  database-viewer.mdx  extension-development.mdx  git-branches.mdx  git-diff.mdx  git-integration.mdx  index.md  index.mdx  installation.md  installation.mdx  keymaps.mdx  meta.json  minimap.mdx  next.config.ts  package.json  project-tabs.md  project-tabs.mdx  quick-open.mdx  release-pipeline-hardening.md  releasing.mdx  syntax-highlighting.mdx  terminal.md  terminal.mdx  themes.mdx  tsconfig.json  workspaces.md  workspaces.mdx
extensions/: index.json  registry.json
interceptor/: Cargo.toml  test_ws.html  test_ws.js
nix/: README.md  dev-shell.nix  package.nix  test.md
scripts/: benchmark-file-open.ts  benchmark-suite.ts  build-extensions-index.ts  check-all-ts.sh  check-all.sh  check-frontend.sh  check-rust.sh  check-zig.ts  (+12 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.preview.conf.json  tauri.smoke.conf.json  tauri.windows.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/appimage-hooks/: AppRun.wrapped  linuxdeploy-plugin-gtk.sh
src-tauri/capabilities/: main.json  pdf-allow.json  windows-fs-anywhere.json
src-tauri/icons/: icon.icns
src-tauri/icons/dev/: icon.icns
src-tauri/icons/preview/: icon.icns
src-tauri/icons/prod/: icon.icns
src-tauri/pi-native-host/: extension-ui.mjs  extension-ui.test.js  index.mjs  pi-settings.mjs  pi-settings.test.js  session-bootstrap.mjs  session-bootstrap.test.js  session-listing.mjs  session-listing.test.js  session-runtime.mjs  session-runtime.test.js  session-transcript.mjs  session-transcript.test.js
src-tauri/src/: app_runtime.rs  app_setup.rs  claude_bridge.rs  file_events.rs  lib.rs  logger.rs  main.rs  menu.rs  secure_storage.rs  service_urls.rs  ssh.rs  terminal.rs
src-tauri/src/bootstrap/: linux.rs  macos.rs
src-tauri/src/commands/: app_logs.rs  chat_history.rs  claude.rs  cli.rs  copilot_auth.rs  extensions.rs  format.rs  fs.rs  fuzzy.rs  lsp.rs  mod.rs  search.rs  shell.rs  terminal.rs  tokens.rs  window.rs
src-tauri/src/commands/ai/: acp.rs  auth.rs  chat_history.rs  claude.rs  mod.rs  ollama.rs  pi_native.rs  tokens.rs
src-tauri/src/commands/database/: connection_manager.rs  credentials.rs  duckdb.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis_db.rs  sidecar.rs  sqlite.rs
src-tauri/src/commands/database/fixtures/: sidecar_error_v1.json  sidecar_legacy_raw_result.json  sidecar_panic_v1.json  sidecar_success_v1.json  sidecar_unsupported_protocol_v2.json
src-tauri/src/commands/development/: cli.rs  cli_args.rs  debugger.rs  docker.rs  ide_recents.rs  lsp.rs  mod.rs  runtime.rs  tools.rs  vscode_recents.rs
src-tauri/src/commands/development/lsp/: commands.rs  convert.rs  mod.rs  types.rs
src-tauri/src/commands/editor/: editorconfig.rs  exec_guard.rs  format.rs  lint.rs  mod.rs  notebook.rs  search.rs
src-tauri/src/commands/git/: blame.rs
src-tauri/src/commands/project/: clipboard.rs  fs.rs  local_history.rs  mod.rs  path_guard.rs  remote.rs  remote_credentials.rs  watcher.rs  wsl.rs
src-tauri/src/commands/ui/: font.rs  mod.rs  theme.rs  window.rs
src-tauri/src/commands/vcs/: github.rs
src-tauri/src/commands/vcs/git/: staging.rs  stash.rs  status.rs
src-tauri/src/commands/version_control/: git.rs  github.rs  github_auth.rs  github_rest.rs  mod.rs
src-tauri/src/extensions/: installer.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/ai/: mod.rs
src-tauri/src/features/ai/acp/: bridge.rs  client.rs  config.rs  mod.rs  types.rs
src-tauri/src/features/ai/pi_native/: bridge.rs  mod.rs  types.rs
src-tauri/src/features/project/: mod.rs
src-tauri/src/features/runtime/: bun.rs  downloader.rs  mod.rs  node.rs  types.rs
src-tauri/src/features/tools/: installer.rs  mod.rs  registry.rs  types.rs
src-tauri/src/lsp/: client.rs  config.rs  manager.rs  mod.rs  utils.rs
src-tauri/src/terminal/: config.rs  connection.rs  manager.rs  mod.rs  shell.rs
(+2879 files in other folders)
