[workspace]
members = [
  "src-tauri",
  "crates/runtime",
  "crates/tooling",
  "crates/lsp",
  "crates/remote",
  "crates/wsl",
  "crates/project",
  "crates/version-control",
  "crates/extensions",
  "crates/terminal",
  "crates/ai",
  "crates/github",
  "crates/fff-search",
  "crates/debugger",
  "crates/database",
]
exclude = ["vendor/phf_generator-0.8.0"]
resolver = "2"

[patch.crates-io]
phf_generator = { path = "vendor/phf_generator-0.8.0" }
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "7815deda7cec511c2623c0e62d89ad02c026ba58" }

[workspace.lints.clippy]
uninlined_format_args = "allow"
new-without-default = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
