[workspace]
members = [
  "src-tauri",
  "crates/runtime",
  "crates/tooling",
  "crates/lsp",
  "crates/remote",
  "crates/wsl",
  "crates/project",
  "crates/version-control",
  "crates/extensions",
  "crates/terminal",
  "crates/ai",
  "crates/github",
  "crates/fff-search",
  "crates/debugger",
  "crates/database",
]
exclude = ["vendor/phf_generator-0.8.0"]
resolver = "2"

[patch.crates-io]
phf_generator = { path = "vendor/phf_generator-0.8.0" }
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "d3a685323977d5618cdc8fe1ad9b8f3c80c6c26c" }

[workspace.lints.clippy]
uninlined_format_args = "allow"
new-without-default = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
