[package]
name = "athas-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.9"
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["test"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
athas-terminal = { path = "../terminal" }
uuid = { version = "1.0", features = ["v4", "serde"] }
which = "7.0"
