[package]
name = "athas-ai"
version = "0.1.0"
edition = "2024"

[features]
default = ["tauri-wry"]
tauri-wry = ["athas-terminal/tauri-wry", "tauri/wry", "tauri/x11"]
linux = ["athas-terminal/linux", "tauri/cef"]

[dependencies]
agent-client-protocol = { version = "0.9", features = [
  "unstable_session_config_options",
  "unstable_session_info_update",
  "unstable_session_list",
] }
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
libc = "0.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", default-features = false, features = ["test"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
athas-terminal = { path = "../terminal", default-features = false }
tempfile = "3"
uuid = { version = "1.0", features = ["v4", "serde"] }
which = "7.0"
