[package]
name = "athas-database"
version = "0.1.0"
edition = "2024"

[lib]
name = "athas_database"
path = "src/lib.rs"

[[bin]]
name = "athas-db-sqlite"
path = "src/bin/athas-db-sqlite.rs"
required-features = ["sqlite"]

[[bin]]
name = "athas-db-duckdb"
path = "src/bin/athas-db-duckdb.rs"
required-features = ["duckdb"]

[[bin]]
name = "athas-db-postgres"
path = "src/bin/athas-db-postgres.rs"
required-features = ["postgres"]

[[bin]]
name = "athas-db-mysql"
path = "src/bin/athas-db-mysql.rs"
required-features = ["mysql"]

[[bin]]
name = "athas-db-mongodb"
path = "src/bin/athas-db-mongodb.rs"
required-features = ["mongodb"]

[[bin]]
name = "athas-db-redis"
path = "src/bin/athas-db-redis.rs"
required-features = ["redis"]

[features]
default = ["sqlite"]
all-providers = ["duckdb", "mongodb", "mysql", "postgres", "redis", "sqlite"]
duckdb = ["dep:duckdb"]
mongodb = ["dep:mongodb"]
mysql = ["dep:sqlx"]
postgres = ["dep:sqlx"]
redis = ["dep:redis"]
sqlite = ["dep:rusqlite"]

[dependencies]
duckdb = { version = "1.4.4", features = ["bundled"], optional = true }
futures-util = "0.3"
mongodb = { version = "3.5.1", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
rusqlite = { version = "0.29.0", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "mysql",
], optional = true }
tokio = { version = "1.0", features = ["full"] }
