[package]
name = "athas-github"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
