[package]
name = "athas-remote"
version = "0.1.0"
edition = "2024"

[features]
default = ["tauri-wry"]
tauri-wry = ["tauri/wry", "tauri/x11"]
linux = ["tauri/cef"]

[dependencies]
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
tauri = { version = "2", default-features = false, features = ["test"] }
uuid = { version = "1", features = ["v4"] }
