[package]
name = "athas-tooling"
version = "0.1.0"
edition = "2024"

[dependencies]
athas-runtime = { path = "../runtime" }
flate2 = "1.0"
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["test"] }
tar = "0.4"
tempfile = "3.20.0"
url = "2.5"
walkdir = "2.5.0"
which = "7.0"
xz2 = "0.1"
zip = "2.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
